# weni

./: 2025-12-01-rust-sysinfobatterycli.txt  CHANGELOG.md  Cargo.toml  README.md  install.ps1  install.sh
.claude/: settings.local.json
.github/workflows/: release.yml
src/: cli.rs  lib.rs  main.rs
src/collectors/: battery.rs  hosts.rs  mod.rs  process.rs  system.rs
src/display/: formatter.rs
